DFG::SpeculativeJIT shouldn't use filter==Contradiction when it meant isClear https://bugs.webkit.org/show_bug.cgi?id=146291 rdar://problem/21435366

Reviewed by Michael Saboff.

The filter() method returns Contradiction only when a value *becomes* clear. This is
necessary for supporting the convention that non-JSValue nodes have a bottom proved
type. (We should fix that convention eventually, but for now let's just be consistent
about it.)

* dfg/DFGFiltrationResult.h: Document the issue.
* dfg/DFGSpeculativeJIT32_64.cpp: Work around the issue.
(JSC::DFG::SpeculativeJIT::fillSpeculateInt32Internal):
(JSC::DFG::SpeculativeJIT::fillSpeculateCell):
(JSC::DFG::SpeculativeJIT::fillSpeculateBoolean):
* dfg/DFGSpeculativeJIT64.cpp: Work around the issue.
(JSC::DFG::SpeculativeJIT::fillSpeculateInt32Internal):
(JSC::DFG::SpeculativeJIT::fillSpeculateInt52):
(JSC::DFG::SpeculativeJIT::fillSpeculateCell):
(JSC::DFG::SpeculativeJIT::fillSpeculateBoolean):



Canonical link: https://commits.webkit.org/164378@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185941 268f45cc-cd09-0410-ab3c-d52691b4dbfc